🔨 Refactor : ReviewNote 모델 삭제 및 관련 파일 수정
