# storage/api-docs/api-docs.json
@@ -309,7 +309,6 @@
                                     "kanji",
                                     "gana",
                                     "meaning",
-                                    "level_id",
                                     "category"
                                 ],
                                 "properties": {
@@ -330,18 +329,13 @@
                                         "type": "json"
                                     },
                                     "level_id": {
-                                        "description": "플레이한 게임 난이도",
+                                        "description": "플레이한 난이도 1:N1, 2:N2, 3:N3, 4:N4, 5:N5, 6:종합, 7:전체, 8:오답노트 중 하나를 선택",
                                         "type": "integer",
-                                        "example": "WorldOfWords"
+                                        "example": "8"
                                     },
                                     "category": {
-                                        "description": "게임 카테고리",
+                                        "description": "게임 카테고리 JLPT, WorldOfWords, CardMatching 중 하나를 선택",
                                         "type": "string",
-                                        "enum": [
-                                            "JLPT",
-                                            "WorldOfWords",
-                                            "CardMatching"
-                                        ],
                                         "example": "WorldOfWords"
                                     }
                                 },
@@ -1049,6 +1043,10 @@
                                     "meaning": {
                                         "description": "의미 리스트",
                                         "type": "json"
+                                    },
+                                    "level_id": {
+                                        "description": "1:N1, 2:N2, 3:N3, 4:N4, 5:N5, 6:종합, 7:전체, 8:오답노트",
+                                        "type": "integer"
                                     }
                                 },
                                 "type": "object"
